--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -83,16 +83,21 @@
                                         <wm-label class="col-md-3 form-control-static" name="label8" caption="Search Municipalities" width="20%" fontweight="bold"></wm-label>
                                         <wm-container class="col-md-9" name="container5" width="80%">
                                             <wm-search name="textSearchMunicipalities" placeholder="Search by Municipality Name" dataset="bind:Variables.GetMunicipalities.dataSet" searchkey="municipalityName" displaylabel="municipalityName" displayimagesrc="logo"
-                                            datafield="All Fields" on-submit="textSearchMunicipalitiesSubmit($event, $scope)" required="true" width="100%"></wm-search>
+                                            datafield="All Fields" on-submit="textSearchMunicipalitiesSubmit($event, $scope)" required="false" width="100%"></wm-search>
                                         </wm-container>
                                     </wm-composite>
                                 </wm-gridcolumn>
                                 <wm-gridcolumn columnwidth="3" name="gridcolumn24" horizontalalign="left">
-                                    <wm-button class="btn-default btn-primary" caption="Add Municipality" type="button" margin="unset 0.5em" name="ButtonAddMuncipalities" iconclass="wi wi-add" on-click="ButtonAddMuncipalitiesClick($event, $scope)" horizontalalign="left"></wm-button>
+                                    <wm-button class="btn-primary" caption="Add Municipality" type="button" margin="unset 0.5em" name="ButtonAddMuncipalities" iconclass="wi wi-add" on-click="ButtonAddMuncipalitiesClick($event, $scope)" horizontalalign="left"
+                                    disabled="bind:!Widgets.textSearchMunicipalities.datavalue"></wm-button>
                                 </wm-gridcolumn>
                             </wm-gridrow>
                             <wm-gridrow name="gridrow14" padding="2px unset unset unset">
-                                <wm-gridcolumn columnwidth="2" name="gridcolumn31"></wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="2" name="gridcolumn31">
+                                    <wm-composite name="composite6" show="false">
+                                        <wm-checkbox caption="Label" class="col-md-push-3 col-md-9" name="checkMunisBeThere" required="true" datavalue="bind:Variables.MunicpalitiesList.dataSet.length > 0" show="true"></wm-checkbox>
+                                    </wm-composite>
+                                </wm-gridcolumn>
                                 <wm-gridcolumn columnwidth="7" name="gridcolumn20_1" padding="2em unset">
                                     <wm-panel iconclass="wi wi-account-balance" name="panel1" title="Your Municipalities">
                                         <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" class="media-list" dataset="bind:Variables.MunicpalitiesList.dataSet" navigation="None" name="livelist1" nodatamessage="There is no Municipality selected. Please search for a Municipality">
@@ -106,7 +111,7 @@
                                                             <wm-label padding="unset 0.5em" name="label12" caption="bind:Variables.MunicpalitiesList.dataSet[$i].states.stateName"></wm-label>
                                                         </wm-gridcolumn>
                                                         <wm-gridcolumn columnwidth="3" name="gridcolumn29">
-                                                            <wm-button class="btn-default btn-primary" caption="Remove" type="button" margin="unset 0.5em" name="buttonRemove" iconclass="wi wi-delete" on-click="buttonRemoveClick($event, $scope, item, currentItemWidgets)"></wm-button>
+                                                            <wm-button class="btn-primary" caption="Remove" type="button" margin="unset 0.5em" name="buttonRemove" iconclass="wi wi-delete" on-click="buttonRemoveClick($event, $scope, item, currentItemWidgets)"></wm-button>
                                                         </wm-gridcolumn>
                                                     </wm-gridrow>
                                                 </wm-layoutgrid>
