--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -12,7 +12,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow19">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn30">
-                        <wm-panel iconclass="wi wi-account-circle" name="panelProfileInfo" title="My Profile Information" badgetype="primary" class="panel-primary">
+                        <wm-panel iconclass="wi wi-account-circle" name="panelProfileInfo" title="User Details" badgetype="primary" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid5">
                                 <wm-gridrow name="gridrow20">
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn33">
@@ -32,62 +32,62 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn34" padding="unset unset unset 5%">
                                         <wm-composite name="composite1" width="100%" margin="2% unset unset unset">
-                                            <wm-label class="col-md-3 control-label" name="label21" caption="First Name"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label21" caption="First Name" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container1">
                                                 <wm-text name="textfn" datavalue="bind:Variables.CurrentUserDetails.dataSet.firstName" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset unset unset" name="composite2">
-                                            <wm-label class="col-md-3 control-label" name="label22" caption="Last Name"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label22" caption="Last Name" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container2">
                                                 <wm-text name="textln" datavalue="bind:Variables.CurrentUserDetails.dataSet.lastName" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset unset unset" name="composite4">
-                                            <wm-label class="col-md-3 control-label" name="label24" caption="Email"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label24" caption="Email Address" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container4">
                                                 <wm-text name="textem" datavalue="bind:Variables.CurrentUserDetails.dataSet.email" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset unset unset" name="composite5">
-                                            <wm-label class="col-md-3 control-label" name="label25" caption="Phone"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label25" caption="Phone Number" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container5">
                                                 <wm-text name="textph" datavalue="bind:Variables.CurrentUserDetails.dataSet.phoneNumber" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset unset unset" name="composite6">
-                                            <wm-label class="col-md-3 control-label" name="label26" caption="Address1"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label26" caption="Address1" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container6">
                                                 <wm-text name="textad1" datavalue="bind:Variables.CurrentUserDetails.dataSet.address1" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset unset unset" name="composite7">
-                                            <wm-label class="col-md-3 control-label" name="label27" caption="Address2"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label27" caption="Address2" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container7">
                                                 <wm-text name="textad2" datavalue="bind:Variables.CurrentUserDetails.dataSet.address2" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset unset unset" name="composite7">
-                                            <wm-label class="col-md-3 control-label" name="label27" caption="City"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label27" caption="City" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container7">
                                                 <wm-text name="textct" datavalue="bind:Variables.CurrentUserDetails.dataSet.city" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset unset unset" name="composite7">
-                                            <wm-label class="col-md-3 control-label" name="label27" caption="State"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label27" caption="State" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container7">
                                                 <wm-select name="selectSt" dataset="bind:Variables.AllStates.dataSet" searchkey="stateName" displaylabel="stateName" datafield="All Fields" orderby="stateName:asc" datavalue="bind:Variables.CurrentUserDetails.dataSet.states"
                                                 displayfield="stateName" placeholder=""></wm-select>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset" name="composite8">
-                                            <wm-label class="col-md-3 control-label" name="label28" caption="Postal Code"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="label28" caption="Postal Code" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container8">
                                                 <wm-text name="textpc" datavalue="bind:Variables.CurrentUserDetails.dataSet.postalCode" placeholder=""></wm-text>
                                             </wm-container>
                                         </wm-composite>
                                         <wm-composite width="100%" margin="2% unset unset unset" name="composite7">
-                                            <wm-label class="col-md-3 control-label" name="labe27" caption="Country"></wm-label>
+                                            <wm-label class="col-md-3 form-control-static" name="labe27" caption="Country" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container7">
                                                 <wm-text name="textctry" datavalue="bind:Variables.CurrentUserDetails.dataSet.country" placeholder=""></wm-text>
                                             </wm-container>
@@ -105,7 +105,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow7_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn16_1">
-                        <wm-panel iconclass="wi wi-building" name="panelMyMunicipalities" title="My Municipalities" class="panel-primary">
+                        <wm-panel iconclass="wi wi-account-balance" name="panelMyMunicipalities" title="My Municipalities" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid5_2">
                                 <wm-gridrow name="gridrow25">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn34_1" horizontalalign="center">
@@ -119,26 +119,26 @@
                                                 <wm-grid-column binding="municipalities.email" caption="Email Address" type="string" primary-key="false" generator="assigned" readonly="true" show="true" related-entity-name="Municipalities"></wm-grid-column>
                                                 <wm-grid-column binding="dateSubscribed" caption="Date Subscribed" type="timestamp" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" filterwidget="text" readonly="false"></wm-grid-column>
                                                 <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                                <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                                <wm-grid-action key="addNewRow" display-name="Add" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                                 <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                             </wm-grid>
-                                            <wm-liveform novalidate="false" errormessage="You have already subscribed to that municipality." title="Add Subscription" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.GetUserSubscriptions.dataSet"
+                                            <wm-liveform novalidate="false" errormessage="You have already subscribed to that municipality." title="Add Municipality" formlayout="dialog" iconclass="wi wi-account-balance" dataset="bind:Variables.GetUserSubscriptions.dataSet"
                                             captionalign="left" captionposition="top" name="liveform2" insertmessage="Municipality added successfully" deletemessage="Municipality deleted successfully">
                                                 <wm-layoutgrid columns="1" name="layoutgrid7">
                                                     <wm-gridrow name="gridrow27_1">
                                                         <wm-gridcolumn columnwidth="12" name="gridcolumn33_1">
-                                                            <wm-form-field name="municipalities" displayname="Municipalities" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true" required="required" widget="select"
-                                                            placeholder="Select Muncipality" displayexpression="municipalityName" orderby="municipalityName:asc"></wm-form-field>
+                                                            <wm-form-field name="municipalities" displayname="Which municipality would you like to subscribe to?" show="true" primary-key="false" generator="assigned" key="municipalities" type="list" is-related="true"
+                                                            required="required" widget="select" placeholder="Select Muncipality" displayexpression="municipalityName" orderby="municipalityName:asc"></wm-form-field>
                                                         </wm-gridcolumn>
                                                     </wm-gridrow>
                                                 </wm-layoutgrid>
-                                                <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number"
-                                                placeholder="Enter value"></wm-form-field>
+                                                <wm-form-field name="dateSubscribed" displayname="Date Subscribed" show="false" primary-key="false" generator="assigned" key="dateSubscribed" type="timestamp" widget="date" maxchars="255" placeholder="Enter value"
+                                                defaultvalue="CURRENT_DATE" outputformat="timestamp"></wm-form-field>
                                                 <wm-form-field name="users" displayname="Users" show="false" primary-key="false" generator="assigned" key="users" type="list" is-related="true" widget="select" placeholder="Select value"
                                                 defaultvalue="bind:Variables.CurrentUserDetails.dataSet"></wm-form-field>
-                                                <wm-form-field name="dateSubscribed" displayname="Date Subscribed" show="false" primary-key="false" generator="assigned" key="dateSubscribed" type="timestamp" widget="date" maxchars="255"
-                                                placeholder="Enter value" defaultvalue="CURRENT_DATE" outputformat="timestamp"></wm-form-field>
-                                                <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Subscribe" disabled="false" type="submit" update-mode="true"></wm-form-action>
+                                                <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number"
+                                                placeholder="Enter value"></wm-form-field>
+                                                <wm-form-action key="save" display-name="Add" show="true" class="form-save btn-primary" iconclass="wi wi-plus" title="Add" disabled="false" type="submit" update-mode="true"></wm-form-action>
                                                 <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button"
                                                 update-mode="true"></wm-form-action>
                                             </wm-liveform>
@@ -151,7 +151,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow31">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn32">
-                        <wm-panel iconclass="wi wi-work" autoclose="outsideClick" name="panel4" title="My Companies" class="panel-primary">
+                        <wm-panel iconclass="wi wi-work" autoclose="outsideClick" name="panel4" title="My Companies" class="panel-primary" show="bind:Variables.GetUserVendors.dataSet.data[$i].id != null">
                             <wm-layoutgrid name="layoutgrid9">
                                 <wm-gridrow name="gridrow32">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn33_5">
@@ -160,7 +160,7 @@
                                                 <wm-grid-column binding="vendor.companyName" caption="Company" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Vendor"></wm-grid-column>
                                                 <wm-grid-column binding="vendor.companyEmail" caption="Email Address" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Vendor"></wm-grid-column>
                                                 <wm-grid-column binding="vendor.companyWebsite" caption="Website" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Vendor"></wm-grid-column>
-                                                <wm-grid-column binding="joiningDate" caption="Joining Date" type="date" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
+                                                <wm-grid-column binding="joiningDate" caption="Date Added" type="date" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
                                             </wm-grid>
                                             <wm-liveform novalidate="false" errormessage="You have already added that company" title="Add Company" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.GetUserVendors.dataSet" captionalign="left"
                                             captionposition="top" name="liveform3" insertmessage="Company added successfully" deletemessage="Company deleted successfully">
@@ -187,11 +187,11 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow22_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn36">
-                        <wm-panel iconclass="wi wi-notifications" name="panelMyNotifications" title="My Notifications" class="panel-primary">
+                        <wm-panel iconclass="wi wi-notifications" name="panelMyNotifications" title="Notification Settings" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid8_1">
                                 <wm-gridrow name="gridrow28_1">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn29_1">
-                                        <wm-label padding="unset 0.5em" name="label32" caption="How often would you like to receive email notifications?"></wm-label>
+                                        <wm-label padding="2em 0.5em unset 0.5em" name="label32" caption="How often would you like to receive email notifications?"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow29_1">
