--- a/src/main/webapp/pages/topnav/topnav.html
+++ b/src/main/webapp/pages/topnav/topnav.html
@@ -2,16 +2,16 @@
     <wm-navbar name="navbar1">
         <wm-nav name="leftTopLinks" type="navbar" class="navbar-left"></wm-nav>
         <wm-nav name="rightTopLinks" type="navbar" class="navbar-right">
-            <wm-nav-item name="list_help">
-                <wm-anchor caption="My Cart" name="helpLink" iconclass="wi wi-shopping-cart" on-click="Variables.goToPage_MyCart.invoke()" badgevalue="0" horizontalalign="left" margin="unset 5px unset unset"></wm-anchor>
+            <wm-nav-item name="list_cart">
+                <wm-anchor caption="My Cart" name="cartLink" iconclass="wi wi-shopping-cart" on-click="Variables.goToPage_MyCart.invoke()" badgevalue="0" margin="unset 2em unset unset"></wm-anchor>
             </wm-nav-item>
-            <wm-nav-item name="nav_item5">
-                <wm-gridcolumn columnwidth="3" name="gridcolumn1" horizontalalign="right">
-                    <wm-picture name="picture1" width="30pt" height="30pt" shape="circle" margin="2pt unset" picturesource="bind:!!Variables.CurrentUserDetails.dataSet.id ? 'services/cx2/Users/'+Variables.CurrentUserDetails.dataSet.id+'/content/photo' : 'resources/images/imagelists/fa-user.png'"
+            <wm-nav-item name="list_profile">
+                <wm-gridcolumn columnwidth="3" name="gridcolumn1">
+                    <wm-picture class="desktop-only" name="picture1" width="30pt" height="30pt" shape="circle" margin="0.4em unset" picturesource="bind:!!Variables.CurrentUserDetails.dataSet.id ? 'services/cx2/Users/'+Variables.CurrentUserDetails.dataSet.id+'/content/photo' : 'resources/images/imagelists/fa-user.png'"
                     on-click="Variables.goToPage_MyProfile.invoke()" show="bind:!!Variables.CurrentUserDetails.dataSet.id"></wm-picture>
                 </wm-gridcolumn>
-                <wm-gridcolumn columnwidth="9" name="gridcolumn1" horizontalalign="center">
-                    <wm-anchor name="anchor5" iconclass="" caption="My Profile" on-click="Variables.goToPage_MyProfile.invoke()" iconposition="left"></wm-anchor>
+                <wm-gridcolumn columnwidth="9" name="gridcolumn2">
+                    <wm-anchor name="profileLink" iconclass="" caption="My Profile" on-click="Variables.goToPage_MyProfile.invoke()" iconposition="left"></wm-anchor>
                 </wm-gridcolumn>
             </wm-nav-item>
             <wm-nav-item name="list_logout">
