--- a/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
+++ b/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
@@ -6,10 +6,9 @@
         <wm-page-content columnwidth="10" name="page_content1">
             <wm-layoutgrid name="layoutgrid1" columns="3">
                 <wm-gridrow name="gridrow7">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn17_1" padding="2em unset">
-                        <wm-label padding="unset 0.5em" name="label5" caption="Municipality Administration" fontweight="bold" fontsize="15"></wm-label>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn17_1" padding="2em unset">
+                        <wm-label name="label5" caption="Municipality Administration" fontweight="bold" class="h4"></wm-label>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="2" name="gridcolumn18_1"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn19_1" padding="2em unset">
                         <wm-composite name="composite1">
                             <wm-label class="col-md-3 form-control-static" name="label6" caption="Select Municipality" fontweight="bold"></wm-label>
