--- a/src/main/webapp/pages/MyCompany/MyCompany.html
+++ b/src/main/webapp/pages/MyCompany/MyCompany.html
@@ -7,7 +7,7 @@
             <wm-layoutgrid name="layoutgrid1">
                 <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn1" padding="2em unset">
-                        <wm-label padding="unset 0.5em" name="label1" caption="My Company Dashboard" fontsize="15" fontweight="bold"></wm-label>
+                        <wm-label name="label1" caption="My Company Dashboard" fontweight="bold" class="h4"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn16_1" padding="2em unset">
                         <wm-composite name="composite1">
