--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -30,7 +30,7 @@
                                             </wm-gridrow>
                                         </wm-layoutgrid>
                                     </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="6" name="gridcolumn34" padding="unset unset unset 5%">
+                                    <wm-gridcolumn columnwidth="6" name="gridcolumn34" padding="2em 2em unset 2em">
                                         <wm-composite name="composite1" width="100%" margin="2% unset unset unset">
                                             <wm-label class="col-md-3 form-control-static" name="label21" caption="First Name" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container1">
@@ -96,7 +96,7 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow22">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn38" horizontalalign="right">
-                                        <wm-button class="btn-primary" caption="Save" type="button" name="buttonSaveProInfo" iconclass="wi wi-save" on-click="Variables.UpdateInfoFromMyProfile.invoke()" margin="1% 3% 1% unset"></wm-button>
+                                        <wm-button class="btn-primary" caption="Save" type="button" name="buttonSaveProInfo" iconclass="wi wi-save" on-click="Variables.UpdateInfoFromMyProfile.invoke()" margin="1em 2em 1em unset"></wm-button>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -201,7 +201,7 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow30">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn33_4" horizontalalign="right">
-                                        <wm-button class="btn-primary" caption="Save" type="button" margin="1% 3% 1% unset" iconclass="wi wi-save" name="buttonSaveCF" on-tap="Variables.UpdateCFInProfile.invoke()"></wm-button>
+                                        <wm-button class="btn-primary" caption="Save" type="button" margin="1em 2em 1em unset" iconclass="wi wi-save" name="buttonSaveCF" on-tap="Variables.UpdateCFInProfile.invoke()"></wm-button>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -241,7 +241,7 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow27">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn36_1" horizontalalign="right">
-                                        <wm-button class="btn-primary" caption="Save" type="submit" margin="1% 3% 1% unset" name="buttonUpdateNew" iconclass="wi wi-save"></wm-button>
+                                        <wm-button class="btn-primary" caption="Save" type="submit" margin="1em 2em 1em unset" name="buttonUpdateNew" iconclass="wi wi-save"></wm-button>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
