--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -793,20 +793,14 @@
                 <wm-gridrow padding="0em unset 1em unset" name="gridrow40">
                     <wm-gridcolumn columnwidth="1" name="gridcolumn93"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="10" horizontalalign="center" name="gridcolumn94">
-                        <wm-label padding="unset 0.5em" caption="bind:Widgets.searchVendor.datavalue.vendor.companyName+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.address1+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.address2+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.city+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.states.stateName+&quot; &quot;+Widgets.searchVendor.datavalue.vendor.postalCode+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.companyPhone+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.companyEmail"
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.searchVendor.datavalue.vendor.companyName+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.fullAddress+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.companyPhone+&quot;, &quot;+Widgets.searchVendor.datavalue.vendor.companyEmail"
                         show="bind:Widgets.searchVendor.datavalue!=undefined" name="label24"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="1" name="gridcolumn95"></wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow41">
-                    <wm-gridcolumn columnwidth="1" name="gridcolumn96"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="10" horizontalalign="center" name="gridcolumn97">
-                        <wm-button class="btn-primary" caption="Add Vendor" type="button" margin="unset 0.5em" iconclass="wi wi-add" show="bind:Widgets.searchVendor.datavalue!=undefined" on-click="buttonTagVendorClick($event, $scope)" name="buttonTagVendor"></wm-button>
-                    </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="1" name="gridcolumn98"></wm-gridcolumn>
-                </wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions4">
+                <wm-button class="btn-primary" caption="Add Vendor" type="button" margin="unset 0.5em" iconclass="wi wi-add" show="bind:Widgets.searchVendor.datavalue!=undefined" on-click="buttonTagVendorClick($event, $scope)" name="buttonTagVendor"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button11" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
